# polyglot

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  mise.toml  pnpm-lock.yaml
.cargo/: config.toml
crates/polyglot-sql/: Cargo.toml  README.md
crates/polyglot-sql-ast-derive/: Cargo.toml
crates/polyglot-sql-ast-derive/src/: lib.rs
crates/polyglot-sql-ffi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/polyglot-sql-ffi/src/: annotate_types.rs  ast.rs  dialects.rs  diff.rs  format.rs  generate.rs  helpers.rs  lib.rs  lineage.rs  memory.rs  openlineage.rs  optimize.rs  parse.rs  tokenize.rs  transpile.rs  types.rs  validate.rs
crates/polyglot-sql-ffi/tests/: ffi_tests.rs
crates/polyglot-sql-function-catalogs/: Cargo.toml  README.md
crates/polyglot-sql-function-catalogs/src/: clickhouse.rs  duckdb.rs  lib.rs
crates/polyglot-sql-function-catalogs/tools/clickhouse/: extract_functions.py
crates/polyglot-sql-function-catalogs/tools/duckdb/: extract_functions.py
crates/polyglot-sql-python/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
crates/polyglot-sql-python/docs/: api.md  index.md
crates/polyglot-sql-python/python/polyglot_sql/: __init__.py  __init__.pyi
crates/polyglot-sql-python/src/: annotate_types.rs  dialects.rs  diff.rs  errors.rs  expr.rs  expr_types.rs  format.rs  generate.rs  helpers.rs  lib.rs  lineage.rs  openlineage.rs  optimize.rs  parse.rs  tokenize.rs  transforms.rs  transpile.rs  types.rs  validate.rs
crates/polyglot-sql-python/tests/: conftest.py  test_compat.py  test_dialects.py  test_diff.py  test_expression.py  test_format.py  test_generate.py  test_lineage.py  test_optimize.py  test_parse.py  test_query_analysis.py  test_transforms.py  test_transpile.py  test_validate.py
crates/polyglot-sql-wasm/: Cargo.toml  test-node.js  test.html
crates/polyglot-sql-wasm/src/: builders.rs  lib.rs
crates/polyglot-sql/benches/: allocation_hotspots.rs  ast_traversal.rs  lineage.rs  parsing.rs  performance_hotspots.rs  rust_parsing.rs  transpile.rs
crates/polyglot-sql/bindings/: AIAgg.ts  AddPartition.ts  AggFunc.ts  AggregateFunction.ts  Aliases.ts  AlterIndex.ts  AlterSet.ts  AlterSortKey.ts  AlterTable.ts  AlterTableAction.ts  AlterViewAction.ts  Analyze.ts  AnalyzeColumns.ts  AnalyzeDelete.ts  AnalyzeHistogram.ts  AnalyzeSample.ts  AnalyzeStatistics.ts  Annotated.ts  ApproxPercentileFunc.ts  ApproxQuantiles.ts  ApproxTopKCombine.ts  ApproxTopSum.ts  ArgMax.ts  ArgMin.ts  ArrayAny.ts  ArrayConstructCompact.ts  ArrayConstructor.ts  ArrayJoinFunc.ts  AtTimeZone.ts  AttachOption.ts  AutoIncrementProperty.ts  AutoRefreshProperty.ts  Base64Encode.ts  BinaryOp.ts  BlockCompressionProperty.ts  BuildProperty.ts  CaseSpecificColumnConstraint.ts  Cast.ts  CeilFunc.ts  CharFunc.ts  (+347 more)
crates/polyglot-sql/examples/: basic_usage.rs  bench_json.rs  test_clickhouse.rs  test_ternary.rs
crates/polyglot-sql/fuzz/: Cargo.toml
crates/polyglot-sql/fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_roundtrip.rs  fuzz_transpile.rs
crates/polyglot-sql/src/: ast_children.rs  ast_json.rs  ast_transforms.rs  builder.rs  diff.rs  error.rs  expressions.rs  function_registry.rs  generator.rs  guard.rs  helper.rs  lib.rs  lineage.rs  openlineage.rs  parser.rs  planner.rs  query_analysis.rs  resolver.rs  schema.rs  scope.rs  time.rs  tokens.rs  transforms.rs  traversal.rs  trie.rs  validation.rs
crates/polyglot-sql/src/dialects/: athena.rs  bigquery.rs  clickhouse.rs  cockroachdb.rs  databricks.rs  datafusion.rs  doris.rs  dremio.rs  drill.rs  druid.rs  duckdb.rs  dune.rs  exasol.rs  fabric.rs  hana.rs  hive.rs  materialize.rs  mod.rs  mysql.rs  oracle.rs  postgres.rs  presto.rs  redshift.rs  risingwave.rs  singlestore.rs  snowflake.rs  solr.rs  spark.rs  sqlite.rs  starrocks.rs  tableau.rs  teradata.rs  tidb.rs  trino.rs  tsql.rs
crates/polyglot-sql/src/dialects/normalization/: aggregates.rs  collections.rs  json.rs  mod.rs  operators.rs  postgres_interval.rs  scalar.rs  statements.rs  temporal.rs  types.rs
crates/polyglot-sql/src/optimizer/: annotate_types.rs  canonicalize.rs  eliminate_ctes.rs  eliminate_joins.rs  isolate_table_selects.rs  mod.rs  normalize.rs  normalize_identifiers.rs  optimize_joins.rs  optimizer.rs  pushdown_predicates.rs  pushdown_projections.rs  qualify_columns.rs  qualify_tables.rs  simplify.rs  subquery.rs
crates/polyglot-sql/src/validation/: clickhouse.rs  mod.rs  tests.rs
crates/polyglot-sql/tests/: analyze_failures.rs  clickhouse_regression.rs  create_view_security_comment_regression.rs  custom_clickhouse_coverage.rs  custom_clickhouse_parser.rs  custom_dialect_tests.rs  deep_nesting_regression.rs  dialect_matrix.rs  error_handling.rs  fabric_regression.rs  fabric_tpch_regression.rs  fixtures  function_validation.rs  identity_roundtrip.rs  issue210_regression_test.rs  issue227_strict_unsupported.rs  ordinality_gaps.rs  postgres_explain_options.rs  postgres_regexp_clickhouse.rs  postgres_sqlite_regression.rs  query_analysis.rs  query_analysis_regression.rs  snowflake_regression_test.rs  sqlglot_compat.rs  sqlglot_dialect_identity.rs  sqlglot_identity.rs  sqlglot_identity_detailed.rs  sqlglot_parser.rs  sqlglot_pretty.rs  sqlglot_transpilation.rs  sqlglot_transpile.rs  sqlite_regression.rs  tpch_transpile_stack.rs  transform_regression.rs  tsql_regression.rs
crates/polyglot-sql/tests/common/: known_failures.rs  mod.rs  test_data.rs  test_runner.rs
crates/polyglot-sql/tests/custom_fixtures/datafusion/: transpilation.json
crates/polyglot-sql/tests/custom_fixtures/hana/: ddl.json  dml.json  functions.json  identity.json  select.json  transpilation.json  types.json
docs/: api-capabilities.json  benchmark.md  current-benchmarks.md  performance-benchmarks.md  sqlglot-architecture.md
licenses/: SQLGLOT_LICENSE.md
scripts/: check-crate-version.sh  (+1 more)
tools/bench-compare/: bench_native_profiles.py  bench_parse.py  bench_python_concurrency.py  bench_simple.py  bench_sqlglot.py  bench_transpile.py  bench_upstream.py  compare.py  criterion_to_markdown.py  pyproject.toml
(+74 files in other folders)
