[workspace]
resolver = "2"
members = [
    "crates/polyglot-sql",
    "crates/polyglot-sql-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["polyglot contributors"]
repository = "https://github.com/tobilg/polyglot"
description = "SQL dialect translator compiled to WebAssembly"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Error handling
thiserror = "1.0"

# Utilities
unicode-segmentation = "1.10"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
