[package]
name = "polyglot-sql-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C FFI bindings for the polyglot-sql SQL transpiler"
publish = false

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
function-catalog-clickhouse = ["polyglot-sql/function-catalog-clickhouse"]
function-catalog-duckdb = ["polyglot-sql/function-catalog-duckdb"]
function-catalog-all-dialects = ["polyglot-sql/function-catalog-all-dialects"]

[dependencies]
polyglot-sql = { path = "../polyglot-sql" }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.29"
