[package]
name = "polyglot-sql-function-catalogs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Optional dialect function catalogs for polyglot-sql semantic validation"
readme = "README.md"

[features]
default = []
dialect-clickhouse = []
dialect-duckdb = []
all-dialects = ["dialect-clickhouse", "dialect-duckdb"]
