[package]
name = "polyglot-sql-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for polyglot-sql"
publish = false

[lib]
name = "_polyglot_sql"
crate-type = ["cdylib"]

[features]
default = []
function-catalog-clickhouse = ["polyglot-sql/function-catalog-clickhouse"]
function-catalog-duckdb = ["polyglot-sql/function-catalog-duckdb"]
function-catalog-all-dialects = ["polyglot-sql/function-catalog-all-dialects"]

[dependencies]
polyglot-sql = { path = "../polyglot-sql" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
pythonize = "0.28"
serde = { workspace = true }
